--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/css/style.css">
     <title>Portfolio de Gabin</title>
 </head>
 <body>
+
+    <video autoplay muted loop id="bg-video">
+    <source src="src/video/Design sans titre.mp4" type="video/mp4">
+    </video>
+
+
     <h1>Bienvenue sur mon portfolio</h1>
+    <div class="contain-btn">
+        <button>Mon protfolio</button>
+        <button>Mon expérience</button>
+        <button>Mes projets</button>
+        <button>Mon profil</button>
+        <button>Fermer la page</button>
+
+
+
+    </div>
+    <script src="src/js/script.js"></script>
 </body>
 </html>
